
[project]
name = "e2b-fastmcp-server"
version = "0.2.2"
description = "E2B sandbox-backed FastMCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.15.0",
    "fastmcp>=0.2.0",
    "e2b-code-interpreter>=1.0.2,<2.0.0",
    "python-dotenv>=1.0.1",
    "build>=1.3.0",
    "twine>=6.2.0",
]

[project.scripts]
e2b-fastmcp-server = "e2b_fastmcp_server:main"

[tool.uv]
# 将源码目录安装为可编辑包，便于通过模块方式运行
package = true

[tool.uv.sources.e2b_fastmcp_server]
path = "src"
